# spidb

./: .$spidb.drawio.bkp  .gitignore  LICENSE.md  README.md  alembic.ini  pyproject.toml  setup.py
.github/workflows/: docs.yaml
croissant/: stored-product-insect-database-spidb-aspids-metadata.json  stored-product-insect-database-spidb-mspids-metadata.json  stored-product-insect-dataset-processed-data-metadata.json
docs/: conf.py  database.md  index.md  installation.md  models.md  requirements.txt  spidb.drawio  usage.md
docs/images/: spidb.drawio
docs/source/: conf.py  index.rst
examples/: analyze_db.py  download_datasets.py  extract_audio.py  generate_db.py  generate_detections.py  generate_figures.py  generate_pytorch.py  generate_records.py  generate_spectrograms.py  generate_spl.py  noise_normalize.py  populate_db.py  sample_db.py  summarize.py  visualization copy.py  visualization.py
examples/dataset_generation/: bug_bytes.py  generate_aspids_envelopes.py  generate_aspids_figures.py  generate_figures.py  generate_mspids_envelopes.py  generate_mspids_figures.py  generate_samples.py  mkdirs.py
spidb/: detection.py  detection_v2.py  lookup.py  normalization.py  spidb.py  statistics.py  visualizer.py
