[tool.ruff]
target-version = "py312"

[tool.ruff.lint]

[tool.hatch.envs.default]
python = "3.12"
dependencies = [ 
    "mypy", 
    "ruff", 
    "pytest", 
    "sphinx",
    "sphinx-click",
    "sphinx-autobuild",
    "furo",
    "myst-parser"
] 

[tool.hatch.envs.default.scripts]
test = "pytest"
lint = [
    "ruff format . ", 
    "ruff lint .",
    "mypy spidb/"
]
lint-check = [
  "ruff format --check .",
  "ruff .",
  "mypy spidb/"
]
docs-serve = "sphinx-autobuild docs/. docs/build"
docs-build-html = "sphinx-build -M html docs/. docs/build"
docs-build-latex = "sphinx-build -M latex docs/. docs/build"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spidb"
version = "0.0.1"
description = "Stored Product Insect Database (SPIDB)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Daniel Kadyrov", email="daniel.kadyrov@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "sonicdb @ git+https://github.com/dkadyrov/sonicdb",
]

[project.urls]
Documentation = "spidb.readthedocs.io"
Issues = "https://github.com/dkadyrov/spidb/issues"
Source = "https://github.com/dkadyrov/spidb"

[tool.hatch.build.targets.sdist]
include = [
    "/examples",
]
